fixed bug where tech-stack collapsibles wasnt collapsing properly. tested api through front end with cities endpoints to make sure they work on web page. will need to add tables from them

--- a/cv-website/src/app/experience/experience.component.css
+++ b/cv-website/src/app/experience/experience.component.css
@@ -1,53 +1,3 @@
-.collapsible {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 1em;
-  }
-  
-  .collapsible-header {
-    padding: 0.5em;
-    cursor: pointer;
-    user-select: none;
-    font-family: 'Funnel', Monospace;
-  }
-  
-  .collapsible-container {
-    width: 100%;
-    border: 2px solid #ddd; /* Adds a border */
-    border-radius: 8px; /* Optional rounded corners */
-    transition: width 0.3s ease, border-color 0.3s ease; /* Smooth transition for width and border */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional shadow for better appearance */
-  }
-  
-  /* Collapsed container */
-  .collapsible-container.collapsed-container {
-    width: 100%; /* Reduce width when collapsed */
-    margin: 0;
-  }
-  
-  
-  /* Collapsed header */
-  .collapsible-header.collapsed-header {
-    width: 95%; /* Match container width when collapsed */
-  }
-  
-  
-
-  
-  /* Collapsible content */
-  .collapsible-content {
-  max-height: 100%;
-  overflow: auto;
-  transition: max-height 0.3s ease;
-  }
-  
-  .collapsible-content.collapsed {
-  max-height: 0;
-  padding: 0;
-  transition: max-height 0.3s ease;
-  }
 
   .experience-list ul{
     list-style-type: disc;
